styles.css
/* Variables */
:root {
    --color-white: hsl(0, 0%, 100%);
    --color-stone-100: hsl(30, 54%, 90%);
    --color-stone-150: hsl(30, 18%, 87%);
    --color-stone-600: hsl(30, 10%, 34%);
    --color-stone-900: hsl(24, 5%, 18%);
    --color-brown-800: hsl(14, 45%, 36%);
    --color-rose-800: hsl(332, 51%, 32%);
    --color-rose-50: hsl(330, 100%, 98%);
    --color-footer: hsl(228, 45%, 44%);
}

/* Fonts */
@font-face {
    font-family: 'Outfit';
    src: url('./assets/fonts/outfit/Outfit-VariableFont_wght.ttf') format('truetype');
    font-weight: 100 900;
}

@font-face {
    font-family: 'YoungSerif';
    src: url('./assets/fonts/young-serif/YoungSerif-Regular.ttf') format('truetype');
    font-weight: 100 900;
}

/* Reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    letter-spacing: 0px;
    line-height: 1.50;
}

/* Base */
body {
    background-color: var(--color-stone-100);
    color: var(--color-stone-600);
    font-family: 'Outfit', sans-serif;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
}

hr {
    border-color: var(--color-stone-150);
}

/* Layout */
article {
    background-color: var(--color-white);
    width: 100%;
    max-width: 46rem;
    margin: auto;
}

/* Image */
img {
    width: 100%;
    display: block;
}

/* Card */
.card-content {
    padding: 2.5rem 2rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.card-header {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1.5rem;
}
/* Typography */
h1,
h2 {
    font-family: 'YoungSerif', sans-serif;
    font-size: 1.75rem;
}

h1 {
    color: var(--color-stone-900);
    font-size: clamp(2.25rem, 2vw, 2.5rem);
    line-height: 1;
}

strong {
    color: var(--color-stone-900);
}
/* Preparation time */
.preparation-time {
    background-color: var(--color-rose-50);
    border-radius: 12px;
    padding: 1.45rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
}

.preparation-time>h2 {
    font-family: 'Outfit', sans-serif;
    color: var(--color-rose-800);
    font-size: 1.25rem;
    line-height: 1;
}

/* Recipe list */
.recipe-list {
    font-size: 1rem;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.recipe-list li {
    list-style-type: none;
    display: flex;
    align-items: center;
    gap: 1.85rem;
    padding-left: 0.5rem;

}

.recipe-list li::before {
    display: inline-block;
    flex-shrink: 0;
    content: "";
    width: 4px;
    height: 4px;
    border-radius: 50%;
    background-color: var(--color-rose-800);
}

/* Ingredients */
.ingredients {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.ingredients>h2 {
    color: var(--color-brown-800);
    line-height: 1;
}

/* Instructions */
.instructions-list>h2 {
    color: var(--color-brown-800);
    line-height: 1;
}

.instructions-list {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.counter-list {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    padding-left: 1.5rem;
}

.counter-list li {
    padding-left: 1rem;
}

.instructions-list>.counter-list li::marker {
    color: var(--color-brown-800);
}

/* Nutrition */
.nutrition-table {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.nutrition-table>h2 {
    color: var(--color-brown-800);
    line-height: 1;
}

caption {
    text-align: left;
    color: var(--color-stone-600);
    padding-bottom: 0.75rem;
}

table {
    width: 100%;
    border-collapse: collapse;
    text-align: left;
}

td,
th {
    padding: 0.75rem;
    border-bottom: 1px solid var(--color-stone-150);
}

th {
    padding-left: 2rem;
    color: var(--color-stone-600);
    font-style: normal;
    font-weight: 500;
}

td {
    padding-right: 2.25rem;
    color: var(--color-brown-800);
    font-weight: bold;
}

tr:last-child td,
tr:last-child th {
    border-bottom: none;
}

/* Attribution */
.attribution {
    font-size: 0.6875rem;
    text-align: center;
}

.attribution a {
    color: var(--color-footer);
}
/* Media query */
@media screen and (min-width: 1440px){
    article {
        padding: 2.5rem;
        border-radius: 1.5rem;
    }
    .card-content {
        padding: 2.5rem 0 0 0;
    }
    img {
        border-radius: 12px;
    }
    h1 {
        font-size: 2.5rem;
    }
}

